2010-05-15  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Darin Fisher.

        Fixing LayerChromium hierarchy updates where due to mixed ownership
        handling, sublayer updates didn't always properly update parent-to-child
        and child-to-parent pointers in sync.
        https://bugs.webkit.org/show_bug.cgi?id=39138

        * platform/graphics/chromium/LayerChromium.cpp:
        (WebCore::LayerChromium::~LayerChromium):
        (WebCore::LayerChromium::setNeedsCommit): Typo fix.
        (WebCore::LayerChromium::insertSublayer):
        (WebCore::LayerChromium::removeFromSuperlayer):
        (WebCore::LayerChromium::removeSublayer):
        (WebCore::LayerChromium::replaceSublayer):
        (WebCore::LayerChromium::removeAllSublayers):
        (WebCore::LayerChromium::setSublayers):
        * platform/graphics/chromium/LayerChromium.h:
        (WebCore::LayerChromium::setSuperlayer):

Canonical link: https://commits.webkit.org/50694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59554 268f45cc-cd09-0410-ab3c-d52691b4dbfc