WebCore/platform/graphics/chromium/LayerChromium.cpp
@@ -76,7 +76,8 @@ LayerChromium::LayerChromium(LayerType type, GraphicsLayerChromium* owner)
 
 LayerChromium::~LayerChromium()
 {
-    // Our superlayer should be holding a reference to us, so there should be no way for us to be destroyed while we still have a superlayer.
+    // Our superlayer should be holding a reference to us so there should be no
+    // way for us to be destroyed while we still have a superlayer.
     ASSERT(!superlayer());
 }
 
@@ -132,7 +133,7 @@ void LayerChromium::setContents(NativeImagePtr contents)
 void LayerChromium::setNeedsCommit()
 {
     // Call notifySyncRequired(), which in this implementation plumbs through to
-    // call setRootLayerNeedsDisplay() on the WebView, which will cause LayerRendererSkia
+    // call setRootLayerNeedsDisplay() on the WebView, which will cause LayerRendererChromium
     // to render a frame.
     if (m_owner)
         m_owner->notifySyncRequired();
@@ -146,18 +147,16 @@ void LayerChromium::addSublayer(PassRefPtr<LayerChromium> sublayer)
 void LayerChromium::insertSublayer(PassRefPtr<LayerChromium> sublayer, size_t index)
 {
     index = min(index, m_sublayers.size());
-    m_sublayers.insert(index, sublayer);
+    sublayer->removeFromSuperlayer();
     sublayer->setSuperlayer(this);
+    m_sublayers.insert(index, sublayer);
     setNeedsCommit();
 }
 
 void LayerChromium::removeFromSuperlayer()
 {
-    LayerChromium* superlayer = this->superlayer();
-    if (!superlayer)
-        return;
-
-    superlayer->removeSublayer(this);
+    if (m_superlayer)
+        m_superlayer->removeSublayer(this);
 }
 
 void LayerChromium::removeSublayer(LayerChromium* sublayer)
@@ -166,9 +165,31 @@ void LayerChromium::removeSublayer(LayerChromium* sublayer)
     if (foundIndex == -1)
         return;
 
-    m_sublayers.remove(foundIndex);
     sublayer->setSuperlayer(0);
+    m_sublayers.remove(foundIndex);
     setNeedsCommit();
+}
+
+void LayerChromium::replaceSublayer(LayerChromium* reference, PassRefPtr<LayerChromium> newLayer)
+{
+    ASSERT_ARG(reference, reference);
+    ASSERT_ARG(reference, reference->superlayer() == this);
+
+    if (reference == newLayer)
+        return;
+
+    int referenceIndex = indexOfSublayer(reference);
+    if (referenceIndex == -1) {
+        ASSERT_NOT_REACHED();
+        return;
+    }
+
+    reference->removeFromSuperlayer();
+
+    if (newLayer) {
+        newLayer->removeFromSuperlayer();
+        insertSublayer(newLayer, referenceIndex);
+    }
 }
 
 int LayerChromium::indexOfSublayer(const LayerChromium* reference)
@@ -223,18 +244,23 @@ const LayerChromium* LayerChromium::rootLayer() const
 
 void LayerChromium::removeAllSublayers()
 {
-    m_sublayers.clear();
+    while (m_sublayers.size()) {
+        LayerChromium* layer = m_sublayers[0].get();
+        ASSERT(layer->superlayer());
+        layer->removeFromSuperlayer();
+    }
     setNeedsCommit();
 }
 
 void LayerChromium::setSublayers(const Vector<RefPtr<LayerChromium> >& sublayers)
 {
-    m_sublayers = sublayers;
-}
+    if (sublayers == m_sublayers)
+        return;
 
-void LayerChromium::setSuperlayer(LayerChromium* superlayer)
-{
-    m_superlayer = superlayer;
+    removeAllSublayers();
+    size_t listSize = sublayers.size();
+    for (size_t i = 0; i < listSize; i++)
+        addSublayer(sublayers[i]);
 }
 
 LayerChromium* LayerChromium::superlayer() const
